--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -78,3 +78,9 @@
         transform: rotate(1turn);
     }
 }
+
+.alert.fade {
+        opacity: 0;
+        transition: opacity 0.5s ease-out;
+    }
+
