--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,16 +1,106 @@
+body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+    }
+
+    .footer-bar {
+      background-color: #1b68b2;
+      color: white;
+      padding: 10px;
+      font-size: 14px;
+      text-align: center;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #4aa2dd;
+      padding: 10px 20px;
+      color: white;
+    }
+
+    .logo {
+      font-weight: bold;
+      font-size: 25px;
+    }
+
+    .logo-img {
+
+    }
+
+    .buttons {
+      display: flex;
+      gap: 10px;
+    }
+
+    .button {
+      background-color: #e6e6e6;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      color: #1b68b2;
+    }
+
+    .domino-line {
+      display: flex;
+      justify-content: center;
+      gap: 5px;
+      margin: 20px 0;
+    }
+
+    .domino-line img {
+      width: 80%;
+      height: auto;
+      max-width: 100%;
+    }
+
+    .content {
+      display: flex;
+      justify-content: center;
+    }
+
+    .left-box {
+      background-color: white;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      text-align: center;
+      width: 40%;
+      height: auto;
+      max-width: 100%;
+    }
+
+    .title {
+      font-size: 48px;
+      color: #4aa2dd;
+      font-weight: bold;
+      text-shadow: 2px 2px 0 #1b68b2;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .subtitle {
+      font-size: 16px;
+      color: #000;
+    }
+
 .container {
-    max-width: 400px;
-    margin: 100px auto;
+    width: 40%;
+    height: auto;
+    max-width: 100%;
+    margin: 50px auto;
     padding: 30px;
     background-color: white;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.title {
-    text-align: center;
-    margin-bottom: 30px;
-    color: #343a40;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .form .form-control {
@@ -32,7 +122,7 @@
 }
 
 .form .form-group label {
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 5px;
 }
 
@@ -70,6 +160,16 @@
     animation: button-loading-spinner 1s ease infinite;
 }
 
+.separator {
+    display: inline-block;
+    width: 6px;
+    height: 24px;
+    background-color: #e0e0e0;
+    border-radius: 3px;
+    margin: 0 10px;
+    vertical-align: middle;
+}
+
 @keyframes button-loading-spinner {
     from {
         transform: rotate(0turn);
@@ -83,4 +183,3 @@
         opacity: 0;
         transition: opacity 0.5s ease-out;
     }
-
