--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,95 +4,97 @@ body {
       background-color: #f5f5f5;
     }
 
-    .footer-bar {
-      background-color: #1b68b2;
-      color: white;
-      padding: 10px;
-      font-size: 14px;
-      text-align: center;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-    }
+.footer-bar {
+  background-color: #1b68b2;
+  color: white;
+  padding: 10px;
+  font-size: 14px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
 
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: #4aa2dd;
-      padding: 10px 20px;
-      color: white;
-    }
+.header {
+  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #4aa2dd;
+  padding: 10px 20px;
+  color: white;
+}
 
-    .logo {
-      font-weight: bold;
-      font-size: 25px;
-    }
+.logo {
+  font-weight: bold;
+  font-size: 25px;
+}
 
-    .logo-img {
+.logo-img {
 
-    }
+}
 
-    .buttons {
-      display: flex;
-      gap: 10px;
-    }
+.buttons {
+  display: flex;
+  gap: 10px;
+}
 
-    .button {
-      background-color: #e6e6e6;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 10px;
-      cursor: pointer;
-      font-weight: bold;
-      color: #1b68b2;
-    }
+.button {
+  background-color: #e6e6e6;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #1b68b2;
+}
 
-    .domino-line {
-      display: flex;
-      justify-content: center;
-      gap: 5px;
-      margin: 20px 0;
-    }
+.domino-line {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  margin: 20px 0;
+}
 
-    .domino-line img {
-      width: 80%;
-      height: auto;
-      max-width: 100%;
-    }
+.domino-line img {
+  width: 80%;
+  height: auto;
+  max-width: 100%;
+}
 
-    .content {
-      display: flex;
-      justify-content: center;
-    }
+.content {
+  display: flex;
+  justify-content: center;
+}
 
-    .left-box {
-      background-color: white;
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      text-align: center;
-      width: 40%;
-      height: auto;
-      max-width: 100%;
-    }
+.left-box {
+  background-color: white;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+  text-align: center;
+  width: 40%;
+  height: auto;
+  max-width: 100%;
+}
 
-    .title {
-      font-size: 48px;
-      color: #4aa2dd;
-      font-weight: bold;
-      text-shadow: 2px 2px 0 #1b68b2;
-      margin-bottom: 20px;
-      text-align: center;
-    }
+.title {
+  font-size: 48px;
+  color: #4aa2dd;
+  font-weight: bold;
+  text-shadow: 2px 2px 0 #1b68b2;
+  margin-bottom: 20px;
+  text-align: center;
+}
 
-    .subtitle {
-      font-size: 16px;
-      color: #000;
-    }
+.subtitle {
+  font-size: 16px;
+  color: #000;
+}
 
-.container {
+.form-container {
     width: 40%;
     height: auto;
     max-width: 100%;
@@ -183,3 +185,38 @@ body {
         opacity: 0;
         transition: opacity 0.5s ease-out;
     }
+
+
+
+@media (max-width: 768px) {
+  .form-container {
+    width: 100%;
+    margin: 20px 0;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 30px 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media (max-width: 768px) {
+  .left-box {
+    width: 100%;
+    padding: 30px 10px;
+    border-radius: 0;
+    box-shadow: none;
+    margin: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media (max-width: 768px) {
+    .title {
+      font-size: 30px;
+      color: #4aa2dd;
+      font-weight: bold;
+      text-shadow: 2px 2px 0 #1b68b2;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+}
