--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/style.css}">
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="form-container">
     <h2 class="title">Acesse sua conta</h2>
 
     <form class="form" th:action="@{/login}" method="post" id="loginForm">
@@ -57,7 +57,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-]
 <script>
     document.getElementById('loginForm').addEventListener('submit', function(e) {
         const submitBtn = document.getElementById('submitBtn');
