Adicionando imagens e estilos as mesmas.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,8 @@
     </div>
 </div>
 <div class="domino-line">
-    <img th:src="@{/images/img.png}" alt="Linha de dominós">
+    <img src="/images/img-mobile.png" alt="domino-mobile" class="img-mobile">
+    <img src="/images/img-desktop.png" alt="domino-desktop" class="img-desktop">
 </div>
 <div class="content">
     <div class="left-box">
