--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -33,7 +33,8 @@ body {
 }
 
 .logo-img {
-
+  width: 8rem;
+  height: 4rem;
 }
 
 .buttons {
@@ -59,7 +60,7 @@ body {
 }
 
 .domino-line img {
-  width: 80%;
+  width: 90%;
   height: auto;
   max-width: 100%;
 }
@@ -172,6 +173,15 @@ body {
     vertical-align: middle;
 }
 
+.img-mobile {
+    display: none;
+}
+
+.img-desktop {
+    display: block;
+    width: 100%;
+}
+
 @keyframes button-loading-spinner {
     from {
         transform: rotate(0turn);
@@ -218,5 +228,23 @@ body {
       text-shadow: 2px 2px 0 #1b68b2;
       margin-bottom: 20px;
       text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
+  .img-mobile {
+    display: block;
+    max-height: 100px;
+    min-height: 100px;
+  }
+   .img-desktop {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+    .logo-img {
+      width: 6rem;
+      height: 3rem;
     }
 }
