Adicionando funcionalidade de recuperação de senha

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,6 +48,7 @@
 
         <div class="footer">
             <p>Não tem uma conta? <a th:href="@{/register}">Cadastre-se</a></p>
+            <p>Esqueceu sua senha? <a th:href="@{/forgot-password}">Clique aqui!</a></p>
         </div>
     </form>
 </div>
