--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -115,6 +115,24 @@ body {
     margin-top: 10px;
 }
 
+.btn-cancel {
+    border: none;
+    border-radius: .25rem;
+    padding: 10px 20px;
+    font-size: 16px;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.btn-exit {
+    background:none;
+    border:none;
+    width:100%;
+    text-align:left;
+    padding:12px 16px;
+    cursor:pointer;
+}
+
 .btn:hover {
     background-color: #0069d9;
 }
@@ -230,6 +248,56 @@ body {
   text-align: center;
 }
 
+.user-dropdown {
+position: relative;
+display: inline-block;
+cursor: pointer;
+    }
+
+.user-icon {
+    font-size: 48px;
+    color: #333;
+    vertical-align: middle;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 4px;
+    padding: 10px 0;
+}
+
+.dropdown-content a, .dropdown-content div {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    cursor: pointer;
+}
+
+.dropdown-content a:hover, .dropdown-content div:hover {
+    background-color: #f1f1f1;
+}
+
+.user-dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.user-name {
+    font-weight: bold;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 5px;
+}
+
+.logout-form {
+    display: inline;
+}
+
 @keyframes button-loading-spinner {
     from {
         transform: rotate(0turn);
@@ -302,5 +370,11 @@ body {
 
   .winner-checkbox {
       transform: scale(1.3);
+  }
+
+  .user-icon {
+      font-size: 38px;
+      color: #333;
+      vertical-align: middle;
   }
 }
