--- a/src/main/resources/templates/create-group.html
+++ b/src/main/resources/templates/create-group.html
@@ -26,7 +26,7 @@
                 <a th:href="@{/account}">Gerenciar conta</a>
                 <a th:href="@{/groups/create}">Criar partida</a>
                 <a th:href="@{/groups/join}">Acessar partida</a>
-                <a th:href="@{/profile/scores}">Minhas partidas</a>
+                <a th:href="@{/matches/my-matches}">Minhas partidas</a>
                 <form class="logout-form" th:action="@{/logout}" method="post">
                     <button type="submit" class="btn-exit">Sair</button>
                 </form>
